--- a/mcmc.ipynb
+++ b/mcmc.ipynb
@@ -116,6 +116,8 @@
     "            Mean parameter of the second coordinate.\n",
     "        std2\n",
     "            Standard deviation parameter of the second coordinate.\n",
+    "        p\n",
+    "            The correlation coefficient.\n",
     "        \"\"\"\n",
     "        self.mean1 = mean1\n",
     "        self.std1 = std1\n",
